name:                hstan
version:             0.1.0.0
synopsis:            Haskell interface to Stan for Bayesian statistics
homepage:            https://github.com/openbrainsrc/hstan
license:             MIT
license-file:        LICENSE
author:              Tom Nielsen
maintainer:          tomn@openbrain.org
build-type:          Simple
cabal-version:       >=1.8


library
  exposed-modules:   Math.Stan
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base
                     , directory
                     , random
                     , mtl
